# open-context

./: .editorconfig  .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  package.json  pm2.config.cjs  pnpm-lock.yaml  pnpm-workspace.yaml  tauri.conf.json  tsconfig.json
.amazonq/prompts/: openspec-archive.md  openspec-proposal.md
.claude/: settings.local.json
.claude/commands/openspec/: apply.md  archive.md  proposal.md
.claude/rules/: coding.md
.codebuddy/rules/: coding.md
.github/: copilot-instructions.md  git-commit-instructions.md
.github/prompts/: openspec-apply.prompt.md  openspec-archive.prompt.md  openspec-proposal.prompt.md
.opencode/command/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
.opencode/rules/: coding.md
apps/open-app/: Cargo.toml  README.md  build.rs  package.json  tauri.conf.json
apps/open-app/capabilities/: default.json  desktop.json
apps/open-app/src/: app_plugins.rs  lib.rs  main.rs
apps/open-app/src/app_command/: chat_commands.rs  directory_commands.rs  dto.rs  file_commands.rs  file_tree_commands.rs  link_commands.rs  mod.rs  note_commands.rs  repository_commands.rs  system_commands.rs  task_commands.rs  terminal_commands.rs  webview_commands.rs  workspace_commands.rs
apps/open-app/src/app_events/: event_emitter.rs  mod.rs
apps/open-app/src/app_service/: app_file_tree.rs  app_sidecar.rs  app_task.rs  mod.rs
apps/open-app/src/app_state/: README.md  app_config.rs  app_state_chat.rs  app_state_file.rs  app_state_folder.rs  app_state_index_job.rs  app_state_link.rs  app_state_note.rs  app_state_repo.rs  app_state_task.rs  app_state_terminal.rs  app_state_webview.rs  app_state_workspace.rs  database.rs  mod.rs  repository_db.rs  state.rs  workspace_db.rs
apps/open-app/src/common/: mod.rs
apps/open-app/src/logging/: file_rotator.rs  log_config.rs  mod.rs
apps/open-node/: .env.example  .gitignore  README.md  esbuild.mjs  package.json  tsconfig.json  vitest.config.ts
apps/open-node/docs/: API接口设计.md
apps/open-node/src/: app.ts
apps/open-node/src/api/: graph-routes.ts  index-routes.ts  query-routes.ts
apps/open-node/src/config/: database-config.ts  index.ts  paths.ts
apps/open-node/src/db/: app-db.ts  data-sync-service.ts  database-health-checker.ts  index-db.ts  index.ts  job-repository.ts  leveldb.ts  qdrant-client.ts  repo-repository.ts  repository-db.ts  sqlite-db.ts  surrealdb-client.ts  workspace-db.ts  workspace-repository.ts
apps/open-node/src/indexers/: ast-parser.ts  code-chunk-builder.ts  code-graph-builder.ts  code-symbol-extractor.ts  common-indexer.ts  file-indexer.ts  index.ts  markdown-indexer.ts  multi-language-extractor.ts  symbol-extractor.ts  url-indexer.ts
apps/open-node/src/jobs/: index-job.ts  job-queue.ts  reindex-job.ts
apps/open-node/src/services/: fulltext-service.ts  graph-service.ts  index.ts  indexer-service.ts  job-service.ts  rag-service.ts  repo-service.ts  vector-service.ts  workspace-service.ts
apps/open-node/src/types/: indexer.ts  repo.ts  symbol.ts  workspace.ts
apps/open-node/src/utils/: fs.ts  git.ts  hash.ts  id.ts  index.ts  logger.ts  vector.ts
apps/open-node/tests/: README.md  workspace-service.test.ts
apps/open-node/tests/api/: graph.test.ts  index.test.ts  query.test.ts  workspace.test.ts
apps/open-node/tests/indexers/: indexer.test.ts  markdown-indexer.test.ts  url-indexer.test.ts  vector.test.ts
apps/open-node/tests/services/: graph-service.test.ts  workspace-service.test.ts
apps/open-node/tests/utils/: git.test.ts
apps/open-web/: README.md  package.json  tsconfig.json  vite.config.mjs  vite.config.ts
apps/open-web/src/: app.css  app.tsx  globals.scss  main.css  routeTree.gen.ts
apps/open-web/src/components/: index.ts
apps/open-web/src/config/: index.ts  paths.ts
apps/open-web/src/context/: global-context.tsx  query-provider.tsx
apps/open-web/src/hooks/: use-app-events.ts  use-cursor-visibility.ts  use-dialog.ts  use-element-rect.ts  use-is-breakpoint.ts  use-menu-navigation.ts  use-throttled-callback.ts  use-tiptap-editor.ts  use-window-size.ts
apps/open-web/src/i18n/: index.ts
apps/open-web/src/lib/: default-settings.ts  default-shortcuts.ts  logger.ts  tiptap-utils.ts
apps/open-web/src/routes/: __root.tsx  index.tsx
apps/open-web/src/services/: README-window.md  file-tree-service.ts  folder-service.ts  http-services.ts  index.ts  types.ts  window-service.ts
apps/open-web/src/storage/: app-store.ts  chat-store.ts  index.ts  persist.ts  right-sidebar-store.ts  sidebar-chat-store.ts  utils.ts
apps/open-web/src/types/: ali-oss.d.ts
capabilities/: default.json  desktop.json
docs/: APP_ASYNC_TASK_PATTERN.md  APP_COLOR_PALETTE.md  APP_CONFIG_USAGE.md  APP_EVENT_SYSTEM.md  APP_STATE_USAGE.md  APP_TAURI.md  APP_TAURI_COMMANDS.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  EVENT_SYSTEM.md  LOGGING.md  NODE_BACKEND.md  README.md  SHARED_STORAGE.md  TAURI_COMMANDS.md  TECH_STACK.md  WEB_COMPONENTS.md
examples/: config_usage.rs  event_usage.rs
openspec/: AGENTS.md  project.md
openspec/changes/add-playground-module/: proposal.md  tasks.md
openspec/changes/add-vscode-file-tree/: COMPLETION_SUMMARY.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-22-refactor-settings-three-column-layout/: proposal.md  tasks.md
openspec/changes/implement-settings-page/: design.md  proposal.md  tasks.md
openspec/changes/refactor-indexer-apis/: design.md  proposal.md  tasks.md
openspec/changes/refactor-web-routes/: design.md  proposal.md  tasks.md
openspec/changes/unify-database-layer/: SUMMARY.md  design.md  proposal.md  tasks.md
openspec/specs/logging/: spec.md
openspec/specs/playground/: spec.md
patches/: marked-terminal.patch
src/: app_commands.rs  app_config.rs  app_event_emitter.rs  app_events.rs  app_file_tree_commands.rs  app_runtime.rs  app_sidecar.rs  app_state.rs  app_state_file.rs  app_state_note.rs  app_state_note.rs.bak  app_state_repo_link.rs  app_state_workspace.rs  app_task.rs  lib.rs  main.rs
(+307 files in other folders)
