[workspace]
resolver = "3"

members = [
    "apps/open-app"
]

[workspace.dependencies]
anyhow = "1.0.100"
chrono = "0.4"
dirs = "5.0"
dotenv = "0.15"
log = "0.4"
git2 = "0.20.3"
walkdir = "2.5.0"
lazy_static = "1.5.0"
portable-pty = "0.9.0"
notify = "8"
ignore = "0.4"
serde_json = "1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.120.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tauri = { version = "2", features = ["macos-private-api"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
