[workspace]
resolver = "3"

members = ["apps/open-app"]

[workspace.dependencies]
# 异步运行时
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# Web 框架
actix-cors = "0.7"
actix-multipart = "0.7"
actix-session = { version = "0.10", features = ["redis-session"] }
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-validator = "7"
actix-ws = "0.3"

# HTTP 客户端
backoff = { version = "0.4", features = ["tokio"] }
cookie = { version = "0.18" }
cookie_store = { version = "0.21" }
reqwest = { version = "0.13", features = ["json", "multipart", "stream", "rustls"], default-features = false }
reqwest_cookie_store = { version = "0.8" }
reqwest-eventsource = "0.6"
url = "2.5"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls"] }
tungstenite = { version = "0.26", features = ["rustls"] }

# gRPC
prost = "0.14.1"
tonic = "0.14.1"
tonic-prost = "0.14.1"
tonic-prost-build = "0.14.1"

# 数据库
mongodb = "3"
qdrant-client = { version = "1.16", features = [] }
redis = { version = "1.0", features = ["tokio-rustls-comp", "r2d2"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "mysql",
    "sqlite",
    "macros",
    "chrono",
    "uuid",
    "derive",
] }
surrealdb = "2.0"

# 序列化
bytes = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 数据验证
uuid = { version = "1.18", features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }

# 加密和安全
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9"
rustls = "0.23"
rustls-pemfile = "2.0"
sha2 = "0.10"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志和追踪
fastrace = { version = "0.7", features = ["enable"] }
fastrace-tracing = "0.1"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# 文件系统
afs = "0.2"
dirs = "5.0"
flate2 = "1.0"
home = "0.5"
ignore = "0.4"
notify = "8"
tar = "0.4"
tempfile = "3"
walkdir = "2.5"
zip = "3.0"

# Git
git2 = "0.20"

# 云服务
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.120"

# 多媒体
async-ffmpeg-sidecar = "0.0.4"
image = "0.25"

# 时间处理
chrono = "0.4"
dayjs = "0.2"

# 命令行
clap = { version = "4", features = ["derive", "string", "env"] }

# 终端
portable-pty = "0.9"

# 工具库
ahash = "0.8"
cfg-if = "1.0"
derive_more = { version = "2.0", features = ["from"] }
dotenv = "0.15"
indexmap = { version = "2.10", features = ["serde"] }
lazy_static = "1"
parking_lot = "0.11"
rand = "0.8"
rayon = "1.10"
regex = "1.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
